fix issue with Function.prototyp.curry and "this"

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"name": "augmentjs",
-	"version": "0.1.7",
+	"version": "0.1.8",
 	"main": "dist/augment.js",
-	"ignore": ['src']
+	"ignore": ["src"]
 }
