update package.json to include test script for CI, add travis-ci build file

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"grunt": "0.4.1",
 		"grunt-contrib-coffee": "0.7.0",
 		"grunt-contrib-qunit": "0.3.0"
+	},
+	"scripts": {
+		"test": "grunt test"
 	}
 }
